--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravelcollective/html": "^6.3",
+        "mehr-it/html-cleaner": "^1.1",
         "opcodesio/log-viewer": "^1.7"
     },
     "require-dev": {
