--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.3",
         "mehr-it/html-cleaner": "^1.1",
-        "opcodesio/log-viewer": "^1.7"
+        "opcodesio/log-viewer": "^1.7",
+        "phpsa/filament-password-reveal": "^1.1"
     },
     "require-dev": {
         "doctrine/dbal": "^3.5",
