--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,19 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://pii-malaysia.test
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_CONNECTION=pgsql
+DB_HOST="db-ram-postgresql-do-user-4152123-0.b.db.ondigitalocean.com"
+DB_PORT=25060
 DB_DATABASE=pii_malaysia
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=doadmin
+DB_PASSWORD="AVNS_gz-dNLI1EtClZdjBlW1"
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
